--- a/src/styles/favourites.css
+++ b/src/styles/favourites.css
@@ -2,5 +2,5 @@
   grid-column: 1 / 4;
   grid-row: 2 / 3;
   min-height: 80vh;
-  background-color: rgb(224, 200, 137);
+  background-color: #A1CCA5;
 }
