--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,7 +1,8 @@
 .footer {
   grid-column: 1 / 4;
   grid-row: 3 / 4;
-  background-color: darkseagreen;
+  background-color: #415D43;
+  color: white;
   height: 10vh;
   display: grid;
   justify-content: center;
