--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -5,21 +5,20 @@ nav {
   align-items: center;
   justify-content: space-between;
   display: flex;
-  background-color: rgb(230, 236, 213);
-  
+  background-color: #415D43;
 }
 
 .title {
   font-size: 40px;
   font-family: "Dancing Script", cursive;
   text-decoration: none;
-  color: black;
+  color: white;
   padding: 0 1.5rem
 }
 
 .nav-item {
   text-decoration: none;
-  color: black;
+  color: white;
   font-size: 20px;
 }
 
@@ -30,12 +29,12 @@ nav {
 
 .nav-item-button {
   text-decoration: none;
-  color: black;
+  color: white;
   font-size: 15px;
-  background-color: rgb(207, 203, 203);
+  background-color: #709775;
   padding: 1.3rem 1rem;
 }
 
 .nav-item-button:hover {
-  background-color: rgb(173, 162, 162);
+  background-color: #111D13;
 }
