--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -1,8 +1,9 @@
 .register {
   grid-column: 1 / 4;
   grid-row: 2 / 3;
-  background-color: rgb(187, 115, 115);
-  height: 80vh;
+  background-color: #A1CCA5;
+  min-height: 80vh;
+  padding-top: 30px;
 }
 
 .register-form { 
@@ -10,7 +11,6 @@
   flex-direction: column;
   align-items: center;
   padding: 10px;
-  background-color: rgb(250, 242, 242);
 }
 
 .register-form input {
@@ -21,6 +21,20 @@
 .register-form input[type="email"],
 .register-form input[type="password"] {
   padding: 0.3rem;
-  width: 50%;
-  background-color: rgb(235, 227, 227);
+  height: 25px;
+  border-radius: 10px;
+  width: 30%;
+  background-color: rgb(247, 234, 234);
+}
+
+.register-button {
+  background-color: #709775;
+  color:white;
+  border-radius: 10px;
+  padding: 0.6rem;
+  width: 30%;
+}
+
+.register-button:hover {
+  background-color: #73A580;
 }
