Connected to restaurants database, created Restaurants and RestaurantCard components and respective styles, modified background colors in the remaining components, added logos and initial styles to Restaurants and RestaurantCards.

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,7 +1,7 @@
 .footer {
   grid-column: 1 / 4;
   grid-row: 3 / 4;
-  background-color: #415D43;
+  background-color: #BF4E30;
   color: white;
   height: 10vh;
   display: grid;
