--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,7 +1,7 @@
 .login {
   grid-column: 1 / 4;
   grid-row: 2 / 3;
-  background-color: #A1CCA5;
+  background-color: rgb(240, 220, 176);
   height: 80vh;
   padding-top: 30px;
 }
@@ -27,7 +27,7 @@
 }
 
 .login-button {
-  background-color: #709775;
+  background-color: #9A031E;
   color:white;
   border-radius: 10px;
   padding: 0.6rem;
@@ -35,5 +35,5 @@
 }
 
 .login-button:hover {
-  background-color: #73A580;
+  background-color: #BF4E30;
 }
