--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -5,7 +5,7 @@ nav {
   align-items: center;
   justify-content: space-between;
   display: flex;
-  background-color: #415D43;
+  background-color: #BF4E30;
 }
 
 .title {
@@ -31,10 +31,10 @@ nav {
   text-decoration: none;
   color: white;
   font-size: 15px;
-  background-color: #709775;
+  background-color: #9A031E;
   padding: 1.3rem 1rem;
 }
 
 .nav-item-button:hover {
-  background-color: #111D13;
+  background-color: #BF4E30;
 }
