--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -1,30 +1,39 @@
 .search-wrapper {
   padding: 10px;
-  background-color: #A1CCA5;
+  background: url("./logos/searchBg.png");
   min-height: 37.5vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .search-box {
   display: flex;
   justify-content: center;
-  height: 60px;
+  height: 45px;
+}
+
+.search-info {
+  background-color: rgb(240, 220, 176);
+  margin: 0 300px;
+  padding: 15px 40px;
+  border-radius: 10px;
 }
 
 .search {
-  width: 40%;
+  width: 80%;
   border-radius: 10px;
-  background-color: rgb(247, 234, 234);
 }
 
 button{
   width: 15%;
-  background-color: #709775;
+  background-color: #9A031E;
   border-radius: 10px;
   color: white;
 }
 
 button:hover {
-  background-color: #73A580;
+  background-color: #BF4E30;
 }
 
 .criteria {
