--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -5,15 +5,21 @@ nav {
   align-items: center;
   justify-content: space-between;
   display: flex;
-  background-color: #BF4E30;
+  background: url("./logos/searchBg.png");
+
 }
+
 
 .title {
   font-size: 40px;
   font-family: "Dancing Script", cursive;
   text-decoration: none;
   color: white;
-  padding: 0 1.5rem
+  height: 100%;
+  padding: 0rem 2rem;
+  display: flex;
+  align-items: center;
+  background-color: #9A031E;
 }
 
 .nav-item {
@@ -33,6 +39,7 @@ nav {
   font-size: 15px;
   background-color: #9A031E;
   padding: 1.3rem 1rem;
+  
 }
 
 .nav-item-button:hover {
