--- a/src/styles/restaurants.css
+++ b/src/styles/restaurants.css
@@ -11,9 +11,24 @@
 }
 
 .card-header {
-  background-color: white;
   padding: 10px;
-  min-width: 47vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.card-description{
+  padding: 10px;
+  width: 800px;
+  display: flex;
+  flex-direction: column;
+  text-align: justify;
+}
+
+.card-info {
+  display: flex;
+  align-items: center;
 }
 
 .text-link {
@@ -23,7 +38,6 @@
 .icons-list {
   display: flex;
   align-items: center;
-  justify-content: center;
   padding: 5px;
 }
 
@@ -35,4 +49,10 @@
 .small-icon-just {
   width:100px;
   height: 20px;
+}
+
+.picture {
+  width: 250px;
+  height: 250px;
+  padding: 5px;
 }
