--- a/src/styles/restaurants.css
+++ b/src/styles/restaurants.css
@@ -1,58 +1,46 @@
 .restaurants {
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
 }
 
 .card {
   background-color: rgb(240, 220, 176);
-  padding: 10px;
-  display: flex
 }
 
-.card-header {
-  padding: 10px;
+.card-header, .card-description {
+  margin: 0 0.5rem;
+  height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
 }
 
-.card-description{
-  padding: 10px;
-  width: 800px;
-  display: flex;
-  flex-direction: column;
-  text-align: justify;
-}
-
-.card-info {
-  display: flex;
-  align-items: center;
+.details-button {
+  width: 100%;
+  height: 40px;
 }
 
 .text-link {
-  color: rgb(245, 37, 245)
+  color: rgb(245, 37, 245);
+  text-decoration: none;
 }
 
-.icons-list {
+.delivery {
   display: flex;
   align-items: center;
+  justify-content: center;
   padding: 5px;
 }
 
-.small-icon {
-  width:90px;
-  height: 50px;
-}
-
-.small-icon-just {
-  width:100px;
-  height: 20px;
+.delivery-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .picture {
   width: 250px;
   height: 250px;
-  padding: 5px;
 }
