--- a/src/styles/restaurants.css
+++ b/src/styles/restaurants.css
@@ -13,11 +13,12 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
 .details-button {
+  margin: 10px auto;
   width: 100%;
   height: 40px;
 }
