Fixed cards position, changed search wrapper styles

--- a/src/styles/restaurants.css
+++ b/src/styles/restaurants.css
@@ -9,12 +9,21 @@
 }
 
 .card-header, .card-description {
-  margin: 0 0.5rem;
+  margin: 0;
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+}
+
+.card-description {
+  padding:0 5px;
+}
+
+.card-description p {
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 .details-button {
