--- a/src/styles/restaurants.css
+++ b/src/styles/restaurants.css
@@ -50,3 +50,15 @@
   width: 250px;
   height: 250px;
 }
+
+@media only screen and (max-width: 768px) {
+  .restaurants {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .restaurants {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
