--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -13,7 +13,7 @@
   padding: 15px 40px;
 }
 
-.search {
+.search-input {
   width: 40%;
 }
 
@@ -27,12 +27,23 @@ button:hover {
   background-color: #BF4E30;
 }
 
-.criteria {
+.categories {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  padding: 10px;
 }
+
+.column {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.column :any-link {
+  text-decoration: none;
+  color: black;
+}
+
 
 @media only screen and (max-width: 768px) {
   
@@ -42,7 +53,7 @@ button:hover {
   .search-info {
     padding: 5px 20px;
   }
-  .search {
+  .search-input {
     width: 80%;
   }
   button{
