--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -22,7 +22,9 @@
   padding: 0.3rem;
   height: 25px;
   width: 80%;
-  background-color: rgb(247, 234, 234);
+  border: none;
+  border-bottom: 2px solid #9A031E;
+  background-color: white;
 }
 
 .login-button {
