--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -23,7 +23,9 @@
   padding: 0.3rem;
   height: 25px;
   width: 80%;
-  background-color: rgb(247, 234, 234);
+  border: none;
+  border-bottom: 2px solid #9A031E;
+  background-color: white;
 }
 
 .register-button {
