Modified placeholder for input in Search.js. Added functionality in Restaurants.js to save a restaurante in Favourites.js and created FavouriteCard.js. Todo: Style favourite card, decide which info will be displayed in FavouriteCard.js, add button to delete a favourite.

--- a/src/styles/restaurants.css
+++ b/src/styles/restaurants.css
@@ -67,6 +67,12 @@
   height: 250px;
 }
 
+.save-button {
+  background-color: rgb(240, 220, 176);
+  border: none;
+  color: black;
+}
+
 @media only screen and (max-width: 768px) {
   .restaurants {
     grid-template-columns: repeat(2, 1fr);
