Favourites functionality working, now a user can save restaurants in his account and delete them upon request. TODO: work on styles, set up a proper alert message.

--- a/src/styles/favourites.css
+++ b/src/styles/favourites.css
@@ -2,11 +2,12 @@
   grid-column: 1 / 4;
   grid-row: 2 / 3;
   min-height: 73vh;
+  grid-template-columns: repeat(1, 1fr);
 }
 
-.favourite-cards {
+.favourite-card {
   display: flex;
-  padding: 10px;
+  justify-content: space-between;
   background-color: rgb(240, 220, 176);
 }
 
