--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -33,10 +33,18 @@
   color:white;
   padding: 0.6rem;
   width: 30%;
+  border: none;
 }
 
 .register-button:hover {
   background-color: #BF4E30;
+}
+
+@media only screen and (max-width: 1068px) {
+  .register-form { 
+    padding: 10px;
+    margin: 0 10px;
+  }
 }
 
 @media only screen and (max-width: 768px) {
