--- a/src/styles/restaurants.css
+++ b/src/styles/restaurants.css
@@ -17,7 +17,7 @@
   align-items: center;
 }
 
-.card-description {
+.card-description p {
   margin: 0 10px;
 }
 
@@ -30,12 +30,17 @@
 }
 
 .details-button {
-  margin: 10px auto;
+  margin: 0 auto;
   width: 100%;
   height: 40px;
   color: white;
   background-color: #9A031E;
   margin-top: 0;
+  border: none;
+}
+
+.details-button:hover {
+  background-color: #BF4E30;
 }
 
 .contact-icons {
@@ -65,6 +70,13 @@
 .picture {
   width: 250px;
   height: 250px;
+  opacity: 1;
+	-webkit-transition: .1s ease-in-out;
+	transition: .1s ease-in-out;
+}
+
+.picture:hover{
+  opacity: .8;
 }
 
 .save-button {
