--- a/src/styles/favourites.css
+++ b/src/styles/favourites.css
@@ -1,11 +1,15 @@
 .favourites {
   grid-column: 1 / 4;
   grid-row: 2 / 3;
+  min-height: 75vh;
+  padding: 10px;
+}
+
+.favourite-cards {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   grid-gap: 10px;
-  min-height: 75vh;
-  margin-bottom: 10px;
+  margin: 10px 0;
 }
 
 .favourite-card {
@@ -13,6 +17,7 @@
   justify-content: space-between;
   background-color: rgb(240, 220, 176);
   margin: 0 100px;
+  height: 130px;
 }
 
 .favourite-picture {
@@ -25,10 +30,6 @@
 
 .favourite-picture:hover{
   opacity: .8;
-}
-
-.favourite-header {
-  
 }
 
 .delete-button {
