--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -4,7 +4,7 @@ nav {
   height: 15vh;
   justify-content: space-between;
   display: flex;
-  background: url("./logos/searchBg.png");
+  background-color: #9A031E;
 }
 
 .title {
@@ -16,12 +16,14 @@ nav {
   height: 100%;
   padding: 0rem 2rem;
   display: flex;
-  background-color: #9A031E;
   letter-spacing: 2px;
 }
 
+.title:hover {
+  background-color: #BF4E30;
+}
+
 .nav-buttons {
-  background-color: #9A031E;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -29,12 +31,18 @@ nav {
 }
 
 .nav-button {
-  background-color: #9A031E;
   text-decoration: none;
   color: white;
   font-size: 15px;
   letter-spacing: 2px;
   padding: 0 1rem;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.nav-button:hover {
+  background-color: #BF4E30;
 }
 
 @media only screen and (max-width: 400px) {
