--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -1,7 +1,3 @@
-.search-wrapper {
-  
-}
-
 .search-box {
   display: flex;
   justify-content: center;
@@ -9,20 +5,24 @@
 }
 
 .search-info {
-  background-color: rgb(240, 220, 176);
   padding: 15px 40px;
+  background: url("logos/searchBg.jpg");
+  background-size: cover;
+}
+
+.search-info h2, h3{
+  color: white;
 }
 
 .search-input {
   width: 35%;
   border: none;
-  border-bottom: 2px solid #9A031E;
-  background-color: rgb(240, 220, 176);
+  padding-left: 5px;
 }
 
 .search-button{
-  background-color: rgb(240, 220, 176);
-  color: #9A031E;
+  color: white;
+  background-color: #9A031E;
   border: none;
 }
 
