--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -48,6 +48,9 @@
 
 
 @media only screen and (max-width: 768px) {
+  .search-info h2 {
+    font-size: 20px;
+  }
   .search-input {
     width: 80%;
   }
