--- a/src/styles/restaurants.css
+++ b/src/styles/restaurants.css
@@ -1,7 +1,19 @@
-.restaurants {
+/** {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}*/
+
+.restaurants-list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
+}
+
+.restaurants {
+  display: grid;
+  grid-template-rows: auto 60px;
+  position: relative;
 }
 
 .card {
@@ -95,14 +107,47 @@
   color: rgb(92, 87, 87);
 }
 
+.pagination {
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  margin: 0px;
+  justify-content: center;
+  align-items: center;
+}
+
+.pagination-list {
+  list-style: none;
+  display: flex;
+  margin-bottom: 0;
+  padding: 0;
+}
+.page-item {
+  border: none;
+  padding: 6px;
+  margin: 5px;
+  display: flex;
+  align-items: center;
+}
+
+.page-link {
+  text-decoration: none;
+  color: #9a031e;
+}
+
+.page-link:active {
+  color: grey;
+}
+
 @media only screen and (max-width: 768px) {
-  .restaurants {
+  .restaurants-list {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media only screen and (max-width: 400px) {
-  .restaurants {
+  .restaurants-list {
     grid-template-columns: repeat(1, 1fr);
   }
 }
